add test for interface(function)